--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <script type="text/javascript" src="frontend.js"></script>
     </head>
     <body>
-        qwe
+        qwer
     </body>
 </html>
